Added creation of an area from chosen world map location, which is used to hide the overlay when close to the area